# GitBuddy

./: Cargo.toml  README.md
.github/workflows/: release.yaml  rust.yaml
src/: config.rs  main.rs
src/ai/: git.rs  llm.rs  mod.rs
src/config/: llm.rs  mod.rs  storage.rs  vendor.rs
src/llm/: mod.rs  openai_compatible.rs  openai_compatible_builder.rs  prompt.rs
src/prompt/: mod.rs
