[package]
name = "gitbuddy"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
colored = "2.1.0"
