[package]
name = "gitbuddy"
version = "0.1.6"
edition = "2021"
authors = ["Jianbang <fujianbang0ops@gmail.com>"]
description = "An AI-driven tool designed to simplify your Git commit process."
license = "Apache-2.0"
repository = "https://github.com/fujianbang/gitbuddy"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
colored = "2.1.0"
rust-embed = { version = "8.4.0", features = ["include-exclude"] }
anyhow = "1.0.86"
dirs = "5.0.1"
toml = "0.8.15"
